# dolphin

./: .gitlab-ci.yml  CMakeLists.txt
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: build-android-libretro.yml  build-iOS-libretro.yml  build-macOS-libretro.yml  build-ubuntu-libretro.yml  build-windows-ming-libretro.yml  build-windows-msvc-libretro.yml
Data/Sys/GameSettings/: E5Z.ini  E63.ini  E6W.ini  E6X.ini  G4Z.ini  G96.ini  GGC.ini  GSN.ini  GWR.ini  R5P.ini  RDZ.ini  RG4.ini  RH6.ini  RHA.ini  RHO.ini  RNB.ini  RSP.ini  SCI.ini  WD9.ini  WKT.ini
Source/: CMakeLists.txt  dolphin-emu.sln
Source/Android/jni/: CMakeLists.txt
Source/Core/: CMakeLists.txt
Source/Core/AudioCommon/: AudioCommon.cpp  CMakeLists.txt  SoundStream.h  WASAPIStream.cpp  WASAPIStream.h
Source/Core/Common/: Analytics.cpp  Arm64Emitter.cpp  Arm64Emitter.h  ArmCPUDetect.cpp  CMakeLists.txt  CodeBlock.h  CommonFuncs.cpp  CommonFuncs.h  CommonTypes.h  DirectIOFile.cpp  DirectIOFile.h  FileSearch.cpp  FileUtil.cpp  FileUtil.h  FilesystemWatcher.h  IOFile.cpp  IOFile.h  MemoryUtil.cpp  MemoryUtil.h  QoSSession.cpp  SPSCQueue.h  ScopeGuard.h  StringUtil.cpp  Swap.h  Thread.cpp  TimeUtil.cpp  Timer.cpp  WILShim.h  WindowSystemInfo.h  WindowsDevice.cpp  WindowsDevice.h  x64CPUDetect.cpp
Source/Core/Common/GL/: GLContext.cpp
Source/Core/Common/Logging/: LogManager.h
Source/Core/Core/: BootManager.cpp  CMakeLists.txt  Core.cpp  Core.h  DolphinAnalytics.cpp  LibusbUtils.cpp  LibusbUtils.h  MemTools.cpp  NetworkCaptureLogger.h  State.cpp  State.h  System.cpp  System.h
Source/Core/Core/Boot/: Boot.cpp  Boot.h
Source/Core/Core/Config/: MainSettings.h
Source/Core/Core/Debugger/: PPCDebugInterface.cpp
Source/Core/Core/HW/: CPU.cpp  CPU.h  GCPadEmu.cpp  Memmap.cpp  Wiimote.cpp  Wiimote.h
Source/Core/Core/PowerPC/: GDBStub.cpp
Source/Core/DolphinLibretro/: Audio.cpp  Audio.h  Boot.cpp  CMakeLists.txt  Host.cpp  Input.cpp  Input.h  Log.cpp  Main.cpp  Options.cpp  Options.h  Video.cpp  Video.h  Vulkan.cpp  Vulkan.h
Source/Core/DolphinLibretro/Common/: CMakeLists.txt  Globals.cpp  Globals.h  Options.cpp  Options.h  VFile.cpp  VFile.h
Source/Core/DolphinLibretro/VideoContexts/: CMakeLists.txt  ContextStatus.cpp  ContextStatus.h  GLContextLR.cpp  GLContextLR.h
Source/Core/DolphinQt/Config/: VerifyWidget.cpp
Source/Core/InputCommon/: CMakeLists.txt  GCAdapter.cpp  InputConfig.cpp
Source/Core/InputCommon/ControlReference/: ExpressionParser.cpp
Source/Core/InputCommon/ControllerInterface/: ControllerInterface.cpp  ControllerInterface.h
Source/Core/UICommon/: UICommon.cpp  UICommon.h
Source/Core/VideoBackends/: CMakeLists.txt
Source/Core/VideoBackends/D3D/: D3DBase.cpp  D3DMain.cpp  D3DState.cpp  D3DState.h  D3DSwapChain.h  DXTexture.cpp  VideoBackend.h
Source/Core/VideoBackends/Null/: NullGfx.h
Source/Core/VideoCommon/: DriverDetails.cpp  DriverDetails.h  Fifo.cpp  Fifo.h  Present.cpp  Present.h  TextureCacheBase.cpp  VertexLoaderARM64.cpp  VideoBackendBase.cpp  VideoBackendBase.h
Source/Core/WinUpdater/: WinUI.cpp
(+55 files in other folders)
